[gd_scene load_steps=5 format=3 uid="uid://bo1jrwv5g0ggt"]

[ext_resource type="PackedScene" uid="uid://bs1bp6xsfcurn" path="res://player.tscn" id="1_c3xqm"]
[ext_resource type="Script" path="res://main.gd" id="1_rimcb"]
[ext_resource type="PackedScene" uid="uid://es58at53fwe6" path="res://enemy.tscn" id="2_fp87e"]

[sub_resource type="Curve2D" id="Curve2D_tgutm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_rimcb")
enemy_scene = ExtResource("2_fp87e")

[node name="Player" parent="." instance=ExtResource("1_c3xqm")]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_tgutm")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
